--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="https://nn.labml.ai/">Visulization</a></li>
         <li><a href="https://ocw.mit.edu/courses/18-06-linear-algebra-spring-2010/">Linear Algebra</a></li>
         <li><a href="https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html">CUDA</a></li>
-        <li><a href="https://buffett.cnbc.com/">WBArchive</a></li>
+        <!-- <li><a href="https://buffett.cnbc.com/">WBArchive</a></li> -->
     </ul>
 </body>
 </html>
