--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Some Jewels</h1>
-    <p>Here are some website I like:</p>
+    <p>Here are some websites I like:</p>
     <ul>
         <li><a href="https://www.ruby-lang.org/en/">Real Jewels</a></li>
         <li><a href="https://docs.unity3d.com/Manual/index.html">Unity Documentation</a></li>
