--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="https://www.ruby-lang.org/en/">Real Jewels</a></li>
         <li><a href="https://docs.unity3d.com/Manual/index.html">Unity Documentation</a></li>
+        <li><a href="https://github.com/Unity-Technologies/Unity-Robotics-Hub">Unity Robotics Hub</a></li>
         <li><a href="https://github.com/david-wei-01001/CSharp-Unity-to-Google-Vertex-AI">C# to Vertex AI</a></li>
         <li><a href="https://github.com/undreamai/LLMUnity">LLMUnity</a></li>
         <li><a href="https://www.geogebra.org/3d?lang=en">3D Calculator</a></li>
