--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <title>Some Jewels</title>
 </head>
 <body>
-    <h1>Some Jewels</h1>
-    <p>Here are some websites I like:</p>
+    <h1>Man Pages</h1>
     <ul>
         <li><a href="https://www.ruby-lang.org/en/">Real Jewels</a></li>
         <li><a href="https://docs.unity3d.com/Manual/index.html">Unity Documentation</a></li>
+        <li><a href="https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html">CUDA</a></li>
+    </ul>
+
+    <h1>Repos</h1>
+    <ul>
         <li><a href="https://github.com/Unity-Technologies/Unity-Robotics-Hub">Unity Robotics Hub</a></li>
         <li><a href="https://github.com/david-wei-01001/CSharp-Unity-to-Google-Vertex-AI">C# to Vertex AI</a></li>
         <li><a href="https://github.com/undreamai/LLMUnity">LLMUnity</a></li>
+        <li><a href="https://huggingface.co/TheBloke">Bloke LLM</a></li>
+        <li><a href="https://github.com/facebookresearch/detectron2">Detectron2</a></li>
+    </ul>
+
+    <h1>Have Fun</h1>
+    <ul>
         <li><a href="https://www.geogebra.org/3d?lang=en">3D Calculator</a></li>
         <li><a href="https://nn.labml.ai/">Paper Visulization</a></li>
         <li><a href="https://ocw.mit.edu/courses/18-06-linear-algebra-spring-2010/">Linear Algebra</a></li>
-        <li><a href="https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html">CUDA</a></li>
         <li><a href="https://www.reddit.com/r/wallstreetbets/">???</a></li>
-        <!-- <li><a href="https://buffett.cnbc.com/">WBArchive</a></li> -->
     </ul>
 </body>
 </html>
