--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="https://techstack-generator.vercel.app/">Skills SVG</a></li>
         <li><a href="https://github.com/tandpfun/skill-icons#readme">Skill Icon</a></li>
         <li><a href="https://www.reddit.com/r/wallstreetbets/">???</a></li>
+        <li><a href="https://github.com/anuraghazra/github-readme-stats?tab=readme-ov-file#repo-card-exclusive-options">Github Rates</a></li>
     </ul>
 </body>
 </html>
