--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="https://github.com/anuraghazra/github-readme-stats?tab=readme-ov-file#repo-card-exclusive-options">Github Rates</a></li>
         <li><a href="https://www.daodejing.org/">Daodejing</a></li>
         <li><a href="https://github.com/alttester/AltTester-Unity-SDK?tab=readme-ov-file">Unity Tester</a></li>
+        <li><a href="https://buffett.cnbc.com/">Buffett Archive</a></li>
     </ul>
 
     <ul>
