--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="https://ocw.mit.edu/courses/18-06-linear-algebra-spring-2010/">Linear Algebra</a></li>
         <li><a href="https://techstack-generator.vercel.app/">Skills SVG</a></li>
         <li><a href="https://github.com/tandpfun/skill-icons#readme">Skill Icon</a></li>
+        <li><a href="https://simpleicons.org/">Comprehensive Skill Icon</a></li>
         <li><a href="https://github.com/anuraghazra/github-readme-stats?tab=readme-ov-file#repo-card-exclusive-options">Github Rates</a></li>
         <li><a href="https://www.daodejing.org/">Daodejing</a></li>
         <li><a href="https://github.com/alttester/AltTester-Unity-SDK?tab=readme-ov-file">Unity Tester</a></li>
