--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="https://github.com/david-wei-01001/CSharp-Unity-to-Google-Vertex-AI">C# to Vertex AI</a></li>
         <li><a href="https://github.com/undreamai/LLMUnity">LLMUnity</a></li>
         <li><a href="https://huggingface.co/TheBloke">Bloke LLM</a></li>
+        <li><a href="https://github.com/hao-ai-lab/LookaheadDecoding">LookAhead Decoding</a></li>
     </ul>
 
     <h1>Have Fun</h1>
