--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="https://www.ruby-lang.org/en/">Real Jewels</a></li>
+        <li><a href="https://github.com/david-wei-01001/Some-Jewels">Real Jewels</a></li>
     </ul>
 
     <h1>Repos</h1>
