--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="https://github.com/undreamai/LLMUnity">LLMUnity</a></li>
         <li><a href="https://huggingface.co/TheBloke">Bloke LLM</a></li>
         <li><a href="https://github.com/hao-ai-lab/LookaheadDecoding">LookAhead Decoding</a></li>
+         <li><a href="https://annas-archive.org/">Free Textbook</a></li>
     </ul>
 
     <h1>Have Fun</h1>
